# rescroll

./: .gitignore  context.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  direct_ip_test.py  direct_test.py  docker-compose.yml  generate_token.py  init_db.sh  init_db_new.py  move_tests.sh  package.json  pyproject.toml  requirements-test.txt  requirements.txt  run.sh  run_background.sh  setup.py  setup.sh  test_all_auth.py  test_auth_fix.py  test_cloudinary.py  test_connection.py  test_cors.py  test_db.py  test_delete_profile_image.sh  test_login_fix.py  test_paper_summary.sh  test_register.py  update_db_schema.py
backend/alembic/: env.py
backend/alembic/versions/: 0801dc1489ba_add_paper_summary_request_model.py  3e4d28b3d964_add_profile_image_to_user_model.py  65235e3d815d_add_paper_summary_request_model.py  75ad21555502_initial_migration.py  7fcab45d1a38_create_user_table.py  93839cdf8146_remove_favorite_domains.py  99480c8f3f6e_add_test_users_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py  attempted_test.py  router.py  users.py
backend/app/api/v1/endpoints/: auth.py  connection_test.py  health.py  items.py  papers.py  simple.py  test.py  users.py
backend/app/core/: auth_service.py  celery_app.py  config.py  db.py  logging.py  logging_config.py  redis.py  security.py
backend/app/crud/: __init__.py  user.py
backend/app/db/: base.py  clickhouse.py  database.py  mongodb.py  session.py  supabase_client.py  utils.py
backend/app/middleware/: logging.py  metrics.py  security.py
backend/app/models/: __init__.py  analytics.py  associations.py  base.py  item.py  news_report.py  paper_summary_request.py  previous_year_paper.py  question.py  quiz_result.py  research.py  research_paper.py  topic.py  user.py  user_preference.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: __init__.py  auth.py  item.py  previous_year_paper.py  token.py  user.py
backend/app/services/: ai.py  analytics.py  analytics_db.py  attempted_test_service.py  auth_service.py  cache.py  celery_tasks.py  item_service.py  paper_summary_service.py  previous_year_paper_service.py  question_service.py  tasks.py  user_service.py
backend/app/services/ai/: gemini_service.py
backend/app/tasks/: email_tasks.py  paper_tasks.py
backend/app/utils/: api_error.py  api_response.py  async_handler.py  cache.py  cloudinary_utils.py  email.py  file_upload.py  logger.py  security.py
backend/backup/: attempted_tests.py  previous_year_paper.py  previous_year_papers.py  question.py  questions.py  user.py  users.py
backend/backup/api/endpoints/: auth.py
backend/backup/api/v1/: previous_year_paper.py
backend/backup/fastapi_backend/app/core/: logging_config.py
backend/backup/fastapi_backend/app/db/: mongodb.py
backend/backup/models/: attempted_test.py  reading_history.py  research.py  test_user.py
backend/backup/schemas/: attempted_test.py  question.py
backend/backup/services/: test_service.py
backend/backup/test_files/: test_paper_summary.py  test_profile_image.py
backend/docs/: README.md  api_documentation.md  authentication.md  paper_summary_api.md  profile_image_api.md  profile_image_postman.json  rescroll_api_postman_collection.json
backend/docs/api/: index.md
backend/docs/api/papers/: details.md  search.md  summary.md
backend/docs/api/v1/: authentication.md  index.md
backend/docs/api/v1/endpoints/: auth.md  papers.md  profile_images.md  users.md
backend/fastapi_backend/app/: main.py
backend/fastapi_backend/app/core/: config.py
backend/src/: app.js
backend/src/controllers/: attemptedTest.controller.js  question.controller.js  user.controller.js
backend/src/middlewares/: auth.middleware.js
backend/src/models/: attemptedTest.model.js  user.model.js
backend/src/routes/: attemptedTest.routes.js  previousYearPaper.routes.js  question.routes.js  user.routes.js
backend/static/: dashboard.html  test_auth.html  test_login.html  update_profile.html  upload_test.html
backend/tests/: README.md  config.py  conftest.py
backend/tests/api/: test_auth.py  test_papers.py  test_users.py
backend/tests/integration/auth/: test_cookie_auth.py
backend/tests/integration/papers/: test_paper_summary.py
backend/tests/scripts/: run_tests.sh  test_paper_summary.sh
backend/tests/utils/: user.py  utils.py
backend_clean/: .gitignore  .pre-commit-config.yaml  README.md
backend_clean/app/core/: logging_config.py
backend_clean/app/db/: base.py
backend_clean/app/services/: publication.py
backend_clean/docs/: rescroll_api_postman_collection.json
frontend/: uichange.md
frontend/res/: app.json  package-lock.json  package.json
frontend/rescroll/: app.config.js  app.json  babel.config.js  package-lock.json  package.json  tsconfig.json
frontend/rescroll/app/: +not-found.tsx  _layout.tsx  ai-icons.tsx  design-demo.tsx  icon-preview.tsx  index.tsx  interest-selection.tsx  login.tsx  notifications.tsx  profile-settings.tsx  signup.tsx
frontend/rescroll/components/: AIIcon.tsx  Button.tsx  Card.tsx  Collapsible.tsx  Container.tsx  CustomTabBar.tsx  GlowCard.tsx  IconPreview.tsx  Input.tsx  LoadingScreen.tsx  ParallaxScrollView.tsx  ProfilePictureActions.tsx  SafeGestureHandler.tsx  SafeModal.tsx  ThemedText.tsx  ThemedView.tsx
temp_backend/: alembic.ini  open_test_login.sh  open_test_page.sh  pyproject.toml  test_browser_auth.py
temp_backend/app/api/endpoints/: users.py
temp_backend/app/crud/: __init__.py
temp_backend/app/db/: redis.py
temp_backend/app/models/: user.py
temp_backend/app/repositories/: user_repository.py
temp_backend/app/schemas/: auth.py
temp_backend/app/services/: research.py
temp_backend/app/services/ai/: base.py
temp_backend/app/utils/: __init__.py
(+42 files in other folders)
