[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rescroll-backend"
version = "0.1.0"
description = "FastAPI backend for Rescroll application"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Ronit", email = "your.email@example.com" }
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
] 