[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "rescroll-backend"
version = "0.1.0"
description = "Research paper reading and quiz generation platform"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Ronit", email = "your.email@example.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "motor",
    "pymongo",
    "pydantic",
    "pydantic-settings",
    "python-jose",
    "passlib",
    "python-multipart",
    "python-dotenv",
    "email-validator",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "motor.*",
    "pymongo.*",
    "passlib.*",
    "jose.*",
    "email_validator.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.poetry]
name = "rescroll-backend"
version = "0.1.0"
description = "Backend for Rescroll application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^2.1.0"
python-dotenv = "^1.0.0"
aiofiles = "^23.2.1"
sqlalchemy = "^2.0.39"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.1"
httpx = "^0.25.1"
requests = "^2.31.0"
celery = "^5.3.4"
flower = "^2.0.1"
redis = "^5.0.1"
google-generativeai = "^0.3.1"
numpy = "^1.26.1"
pandas = "^2.2.1"
scikit-learn = "^1.6.1"
cloudinary = "^1.39.1"
python-magic = "^0.4.27"
lxml = "^4.9.3"
loguru = "^0.7.2"
watchfiles = "^0.21.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"